# ZcChat2

./: .gitignore  CMakeLists.txt  README.md  ZcChat2.bat  ZcChat2.md  history_problems_and_solutions.md  main.cpp  res.qrc
.github/workflows/: manual-win-linux-release.yml  qt6-cmake-win-linux.yml
.mimocode/plans/: 1781639633188-tidy-engine.md
cmake/: MacOSXBundleInfo.plist.in
res/default_config/ZcChat2/: config.ini
windows/dialog/: dialog.cpp  dialog.h  dialog.ui
windows/dialog/history/: historychild.cpp
windows/setting/: setting.cpp
windows/setting/child/: settingchild_char.cpp  settingchild_char.ui  settingchild_general.cpp  settingchild_general.h  settingchild_general.ui  settingchild_llm.cpp  settingchild_llm.h  settingchild_llm.ui  settingchild_plugin.cpp  settingchild_plugin.ui  settingchild_speech.cpp  settingchild_speech.h  settingchild_speech.ui  settingchild_vits.ui
windows/tachie/: tachie.cpp  tachie.h
